# miniature-enigma

./: .gitignore  CLAUDE.md  Makefile  README.md  cat.go  go.mod  go.sum  host.go  host_test.go  pubsub.go  pubsub_test.go  subscription.go  topic.go  topic_test.go
.github/workflows/: ci.yml
cmd/benchmark-pedersen/: README.md  main.go
cmd/benchmark-pedersen-rust/: .gitignore  Cargo.toml  README.md
cmd/benchmark-pedersen-rust/src/: main.rs
ec/: ec.go  ec_test.go
ec/encode/: encode.go
ec/encode/rlnc/: rlnc.go  (+2 more)
ec/field/: binary.go  binary_test.go  bits.go  field.go  matrix.go  matrix_test.go  prime.go  prime_test.go
ec/group/: group.go  ristretto255.go  ristretto255_test.go
examples/: README.md
examples/rlnc-network/: README.md  main.go  test.sh
examples/rs-network/: README.md  main.go  test.sh
examples/simple/: README.md  main.go
floodsub/: floodsub.go  floodsub_test.go  timecache.go  timecache_test.go
host/: host.go  host_test.go
pb/: rpc.pb.go  rpc.proto
pubsub/: pubsub.go  pubsub_test.go  router.go  subscription.go  topic.go  topic_test.go
rlnc/: rlnc.go  rlnc_test.go  verify.go
rlnc/field/: bits_test.go  field.go  matrix.go  prime.go  prime_test.go
shadow/: .gitignore  COMPARISON.md  Makefile  README.md  TOPOLOGY.md  compare_protocols.py  main.go  network_graph.py  shadow.template.yaml  test_results.py
shadow/floodsub/: Makefile  main.go
shadow/gossipsub/: Makefile  main.go
shadow/rlnc/: Makefile  main.go
shadow/rs/: Makefile  main.go
shadow/topology/: generators.go  topology-10.json  topology-15.json  topology.go
(+6 files in other folders)
